--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker Compose
-        run: docker-compose up -d
+        uses: hoverkraft-tech/compose-action@v2.0.1
+        with:
+            compose-file: ./docker-compose.yml
+            up-flags: -d
 
       - name: Run tests
         run: npx playwright test
-
-      - name: Tear down Docker Compose
-        run: docker-compose down
