--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Docker Compose
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
-            compose-file: ./docker-compose.yml
+            compose-file: ./docker-compose.yaml
             up-flags: -d
 
       - name: Run tests
