Added new tests and changed ci.yml file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,8 @@ jobs:
             compose-file: ./docker-compose.yaml
             up-flags: -d
 
-      - name: Run tests
-        run: npx playwright test
+      - name: Run test to check empty array test
+        run: npx playwright test tests/empty-array.test.ts
+
+      - name: Run test to check remaining tests without empty array
+        run: npx playwright test tests/user-controller.test.ts
