--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,5 @@ jobs:
             compose-file: ./docker-compose.yaml
             up-flags: -d
 
-      - name: Run test to check empty array test
-        run: npx playwright test tests/empty-array.test.ts
-
-      - name: Run test to check remaining tests without empty array
-        run: npx playwright test tests/user-controller.test.ts
+      - name: Run test
+        run: npx playwright test
